--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author": "Martín Rojas",
+	"description": "Estoy aprendiendo npm",
+	"keywords": [ "freecodecamp", "npm", "backend", "apis" ],
+	"license": "MIT",
+	"version": "1.0.0",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "~4.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node --watch myApp.js"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
-	},
-	"author": "Martín Rojas"
+		"url": "https://github.com/retak1ng/gestion-de-paquetes-con-npm.git"
+	}
 }
